# AvarionX-VPN

./: .gitignore  README.md  buildHysteria.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/libs/: aidl-release.aar  api-release.aar  provider-release.aar
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  tun2socks_jni.cpp
android/app/src/main/cpp/lwip_android_override/arch/: cc.h
assets/shaders/: day_night.frag
lib/: main.dart
lib/constants/: build_flags.dart  launch_flag.dart
lib/l10n/: app_en.arb  app_ja.arb  app_pl.arb
lib/purchase/: pro_temp_service.dart
lib/services/: purchase_service.dart  service_manager.dart
lib/services/dnsService/: auth_service.dart
lib/services/themes/: theme_manager.dart
lib/translations/: app_ar.arb  app_en.arb  app_es.arb  app_ja.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_ja.dart  app_localizations_pl.dart  app_localizations_pt.dart  app_pt.arb  completed.txt
lib/vpn/: Network_app_control_screen.dart  Network_speed_test_screen.dart  full_vpn_demo_home_screen.dart  full_vpn_footer_nav.dart  full_vpn_mode_screen.dart  vpn_permission_intro_screen.dart
lib/vpn/dns/: NetworkProtectionScreen.dart  PrivateDnsScreen.dart  network_live_logs_screen.dart  network_protection_models.dart
lib/vpn/screens/: full_vpn_customisation_screen.dart  full_vpn_dns_tab.dart  full_vpn_sound_settings_screen.dart  mainScreen.dart
lib/vpn/services/: animated_connecting_route_layer.dart  full_vpn_backend.dart  full_vpn_free_pool_service.dart  full_vpn_installed_apps_worker.dart  full_vpn_location_map.dart  full_vpn_location_service.dart  full_vpn_notification_worker.dart  full_vpn_server_locations.dart  vpn_region_load_service.dart
lib/vpn/settings/: full_vpn_account_screen.dart  full_vpn_privacy_security_screen.dart  full_vpn_settings_tab.dart  full_vpn_split_tunneling_screen.dart  full_vpn_upgrade_screen.dart
lib/vpn/widgets/: full_vpn_server_picker_sheet.dart  full_vpn_server_selector_chip.dart
(+49 files in other folders)
